- fixed testing design issues - added off-screen document

--- a/src/pages/options/assets/options.scss
+++ b/src/pages/options/assets/options.scss
@@ -13,10 +13,8 @@ body {
   overflow: hidden;
   overflow-y: scroll;
 
-  font: 15px 'Roboto', 'Ubuntu', Sans-Serif;
+  // font: 15px 'Roboto', 'Ubuntu', Sans-Serif;
   color: var(--base-text-color);
-
-  // transition: --body-color 0.5s ease-in-out;
   line-height: 25px;
 }
 
@@ -27,7 +25,6 @@ body {
 
   font-size: 16px;
   font-family: "Google Sans Text", 'Roboto', 'Ubuntu', Sans-Serif;
-  font-weight: 300;
 }
 
 .content {
@@ -119,7 +116,6 @@ fieldset:disabled {
   border: var(--tile-border-color);
   border-radius: 4px;
   box-shadow: 0px 0px 4px 0px var(--tile-shadow-color);
-  font-weight: 400;
 }
 
 .row:last-child {
@@ -424,7 +420,7 @@ div ul {
 
 .info span {
   font-style: italic;
-  font-size: small;
+  font-size: smaller;
   color: var(--base-highlight-color);
 }
 
