--- a/src/pages/whats-new/assets/whats-new.scss
+++ b/src/pages/whats-new/assets/whats-new.scss
@@ -13,10 +13,7 @@ body {
 
   font-size: 16px;
   font-family: "Google Sans Text", 'Roboto', 'Ubuntu', Sans-Serif;
-  font-weight: 300;
   color: var(--base-text-color);
-
-  // transition: --body-color 0.5s ease-in-out;
   line-height: 25px;
 }
 
@@ -117,6 +114,10 @@ body {
   width: 50%;
   padding: 7px;
   box-sizing: border-box;
+}
+
+.row .image {
+  max-width: 690px;
 }
 
 .row .head {
