--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -1,9 +1,10 @@
-html, body {
+html,
+body {
   background: var(--body-background);
 
   width: 600px;
   height: 270px;
-  border:0;
+  border: 0;
   margin: 0px;
   padding: 0px;
 
@@ -21,7 +22,7 @@ html, body {
   height: 244px;
 }
 
-.middle, 
+.middle,
 .middle .details-view {
   height: 450px;
 }
